--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -93,7 +93,7 @@
     <string name="message_delete_account_confirm">Are you sure you want to delete your account? This action is irreversible and will permanently remove all your data, including your profile and settings.</string>
     <string name="item_home">Home</string>
     <string name="item_bluetooth">Bluetooth</string>
-    <string name="item_calender">Calender</string>
+    <string name="item_calendar">Calendar</string>
     <string name="item_profile">Profile</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
@@ -105,6 +105,9 @@
     <string name="label_quick_status">Quick status</string>
     <string name="label_connect_bluetooth">Connect Bluetooth</string>
     <string name="btn_tap_to_scan">Tap to scan</string>
-    <string name="label_calender">Calender</string>
+    <string name="label_calendar">Calendar</string>
     <string name="btn_view_all">View all</string>
+    <string name="label_list_of_available_devices">List of Available Devices</string>
+    <string name="btn_scan_for_devices">Scan for Devices</string>
+    <string name="btn_connect">Connect</string>
 </resources>
