Set localization Add Verification code Add Forgot Pass selection Registration working

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -110,4 +110,40 @@
     <string name="label_list_of_available_devices">List of Available Devices</string>
     <string name="btn_scan_for_devices">Scan for Devices</string>
     <string name="btn_connect">Connect</string>
+
+    <string name="btn_next">Next</string>
+    <string name="btn_skip">Skip</string>
+    <string name="btn_get_start">Get Start</string>
+    <string name="lbl_welcome">Welcome</string>
+    <string name="lbl_sign_in_to_continue">Sign in to continue!</string>
+    <string name="lbl_email">Email</string>
+    <string name="hint_enter_your_email_here">Enter your email here</string>
+    <string name="lbl_password">Password</string>
+    <string name="hint_enter_password_here">Enter password here</string>
+    <string name="lbl_forgot_password_que">Forgot Password?</string>
+    <string name="lbl_login">Login</string>
+    <string name="lbl_or_sign_in_with">Or sign in with</string>
+    <string name="don_t_have_an_account_register_now">Don’t have an account? Register Now</string>
+    <string name="register_now">Register Now</string>
+    <string name="lbl_select_with_contact_details_should_we_use_to_reset_your_password">Select with contact details should we use to reset your password</string>
+    <string name="lbl_phone_number">Phone Number</string>
+    <string name="lbl_forgot_password">Forgot Password</string>
+    <string name="btn_reset_password">Reset Password</string>
+    <string name="lbl_please_enter_your_email_to_reset_the_password">Please enter your email to reset the password</string>
+    <string name="hint_enter_phone_no_here">Enter phone no here</string>
+    <string name="lbl_please_enter_your_phone_no_to_reset_the_password">Please enter your phone no to reset the password</string>
+    <string name="lbl_set_a_new_password">Set a New Password</string>
+    <string name="lbl_create_a_new_password_ensure_it_differs_from_previous_ones_for_security">Create a new password. Ensure it differs from previous ones for security</string>
+    <string name="lbl_confirm_password">Confirm Password</string>
+    <string name="btn_submit">Submit</string>
+    <string name="lbl_enter_the_verification_code">Enter the Verification Code</string>
+    <string name="title_otp_verification">OTP Verification</string>
+    <string name="lbl_don_t_receive_code_re_send">Don’t receive code? Re-send</string>
+    <string name="re_send">Re-send</string>
+    <string name="lbl_get_started_now">Get Started Now</string>
+    <string name="lbl_create_an_account_or_log_in_to_explore_about_our_app">Create an account or log in to explore about our app</string>
+    <string name="hint_enter_your_full_name_here">Enter your full name here</string>
+    <string name="lbl_full_name">Full Name</string>
+    <string name="hint_select_your_gender">Select your Gender</string>
+    <string name="lbl_gender">Gender</string>
 </resources>
