Refactor bottom sheet dialogs and update UI components
Removed CommonBottomSheetDialog and related resources, replacing them with CommonConfirmationBottomSheetDialog and CommonSuccessBottomSheetDialog for improved modularity and clarity. Updated usages across activities and fragments, refactored WebViewActivity to profile package, and enhanced UI layouts for consistency, including phone number field support and improved padding. Deleted unused SettingRepository and SettingViewModel. Minor UI tweaks and resource renaming for better maintainability.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -173,13 +173,28 @@
     <string name="lbl_message">Message</string>
     <string name="hint_enter_your_comment_here">Enter your comment here</string>
     <string name="title_bluetooth_device_troubleshooting">Bluetooth device troubleshooting</string>
-    <string name="lbl_issue_message">Issue Message</string>
+    <string name="lbl_issue_message">Issue message</string>
     <string name="title_edit_profile">Edit Profile</string>
     <string name="label_note">Notes</string>
-    <string name="hint_enter_note">Enter here...</string>
+    <string name="hint_enter_note">Enter here…</string>
     <string name="btn_add">Add</string>
     <string name="label_notification">Notification</string>
     <string name="label_connect_bluetooth_devices">Connected Bluetooth Devices</string>
     <string name="lbl_faq">FAQ</string>
     <string name="lbl_data_privacy">Data Privacy</string>
+    <string name="label_password_update_successfully">Password Update\nSuccessfully</string>
+    <string name="message_password_reset_successfully">Password changed successfully, you\ncan login again with new password</string>
+    <string name="btn_back_to_login">Back to login</string>
+    <string name="label_data_privacy">Data privacy</string>
+    <string name="message_delete_account_confirmation">Are you sure you want to delete your\naccount? This action is permanent and\ncannot be undone.</string>
+    <string name="btn_cancel">Cancel</string>
+    <string name="btn_delete">Delete</string>
+    <string name="label_account_deleted">Account Deleted\nSuccessfully</string>
+    <string name="message_account_deleted_success">Account deleted successfully, we are\nsorry to see you go!</string>
+    <string name="btn_okay">Okay</string>
+    <string name="label_logout_successfully">Logout Successfully</string>
+    <string name="message_logout_confirmation">Are you sure you want to logout?</string>
+    <string name="btn_logout">Logout</string>
+    <string name="label_logged_out">Logged Out\nSuccessfully</string>
+    <string name="message_logout_successfully">You have been logged out successfully.</string>
 </resources>
