--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -197,4 +197,5 @@
     <string name="btn_logout">Logout</string>
     <string name="label_logged_out">Logged Out\nSuccessfully</string>
     <string name="message_logout_successfully">You have been logged out successfully.</string>
+    <string name="label_yesterday">Yesterday</string>
 </resources>
